--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4609,10 +4609,13 @@ a.thumbnail.active {
   color: #333;
 }
 .alert {
+  z-index: 99;
   padding: 15px;
   margin-bottom: 20px;
   border: 1px solid transparent;
   border-radius: 4px;
+  opacity: 1;
+  transition: opacity 0.4s; /* 400ms to fade out */
 }
 .alert h4 {
   margin-top: 0;
